[package]
name = "p2pfile"
version = "0.1.0"
authors = ["tsymeter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.39.1"
futures = "0.3.16"
async-trait = "0.1.51"
structopt = "0.3.22"
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.8.1"
ip_network = "0.4.0"
sp-core = "3.0.0"
linked_hash_set = "0.1.4"
futures-timer = "3.0.2"
log = "0.4.14"
void = "1.0.2"
rand = "0.8.4"
smallvec = "1.6.1"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
